# snappr-mcp

./: .env.example  .gitignore  LICENSE  README.md  app.py  hello.py  pyproject.toml  run_server.sh  snappr_mcp.py
